# RAGSynth

./: .pypirc  README.md  pyproject.toml  requirements.txt  setup.py
examples/: example.ipynb
ragsynth/: __init__.py  data_handler.py  eval_data_generator.py  model.py  models.py  qa_generator.py
tests/: test.ipynb
tests/test_data/: test1.txt  test2.txt  test3.txt
