[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragsynth"
version = "0.1.1"
description = "Quickly generate synthetic evaluation datasets for RAG projects"
authors = [{name = "Bassim Eledath", email = "bassimfaizal@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/bassimeledath/RAGSynth"

[tool.setuptools]
packages = ["ragsynth"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}